# mcp_kubernetes

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/mcp_kubernetes/: config.py  main.py
src/mcp_kubernetes/tools/: __init__.py  deployments.py  logs.py  nodes.py  pods.py
