[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-kubernetes"
version = "0.1.0"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "Model Context Protocol server for Kubernetes operations"
authors = [{name = "Javier Terceiro", email = "jtlopez@gmail.com"}]
dependencies = [
    "kubernetes>=28.0.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy"
]
